[package]
name = "tonic-google-logging-api-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.8"
prost-types = "0.11.8"
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = "0.1.14"
tonic = { version = "0.9.2", features = ["tls", "tls-webpki-roots"] }
yup-oauth2 = "8.3.0"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["cleanup-markdown"] }
